--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -247,6 +247,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Member\Index.cshtml" />
     <Content Include="Views\Member\MemberForm.cshtml" />
+    <Content Include="Views\Member\Archive.cshtml" />
+    <Content Include="Views\Member\_MemberFilterGrid.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
