--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\MemberController.cs" />
+    <Compile Include="Controllers\SwimmingEventController.cs" />
     <Compile Include="Controllers\SwimmingMeetController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -195,14 +196,26 @@
     <Compile Include="Migrations\202012161702065_AddSwimmingMeets.Designer.cs">
       <DependentUpon>202012161702065_AddSwimmingMeets.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012161749309_AddSwimmingEvent.cs" />
+    <Compile Include="Migrations\202012161749309_AddSwimmingEvent.Designer.cs">
+      <DependentUpon>202012161749309_AddSwimmingEvent.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012161856214_AddSwimmingEvent1.cs" />
+    <Compile Include="Migrations\202012161856214_AddSwimmingEvent1.Designer.cs">
+      <DependentUpon>202012161856214_AddSwimmingEvent1.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Lane.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\PoolSizeType.cs" />
+    <Compile Include="Models\SwimmingEvent.cs" />
     <Compile Include="Models\SwimmingMeet.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModel\AllMeetEventsViewModel.cs" />
+    <Compile Include="ViewModel\SwimmingEventFormViewModel.cs" />
     <Compile Include="ViewModel\SwimmingMeetFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -268,6 +281,11 @@
     <Content Include="Views\SwimmingMeet\Index.cshtml" />
     <Content Include="Views\SwimmingMeet\_MeetFilterGrid.cshtml" />
     <Content Include="Views\SwimmingMeet\SwimmingMeetForm.cshtml" />
+    <Content Include="Views\Shared\_NavBar.cshtml" />
+    <Content Include="Views\SwimmingEvent\Index.cshtml" />
+    <Content Include="Views\SwimmingEvent\_EventFilterGrid.cshtml" />
+    <Content Include="Views\SwimmingEvent\SwimmingEventForm.cshtml" />
+    <Content Include="Views\SwimmingEvent\AllMeetEvents.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -300,6 +318,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012161702065_AddSwimmingMeets.resx">
       <DependentUpon>202012161702065_AddSwimmingMeets.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012161749309_AddSwimmingEvent.resx">
+      <DependentUpon>202012161749309_AddSwimmingEvent.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012161856214_AddSwimmingEvent1.resx">
+      <DependentUpon>202012161856214_AddSwimmingEvent1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
