--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -168,6 +168,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\FamilyGroupController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LaneController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
@@ -209,8 +210,13 @@
     <Compile Include="Migrations\202012161957553_AddApplicationUserToLane.Designer.cs">
       <DependentUpon>202012161957553_AddApplicationUserToLane.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012171327039_AddFamilyGroup.cs" />
+    <Compile Include="Migrations\202012171327039_AddFamilyGroup.Designer.cs">
+      <DependentUpon>202012171327039_AddFamilyGroup.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\FamilyGroup.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Lane.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -293,6 +299,9 @@
     <Content Include="Views\SwimmingEvent\SwimmingEventForm.cshtml" />
     <Content Include="Views\SwimmingEvent\AllMeetEvents.cshtml" />
     <Content Include="Views\Lane\LaneForm.cshtml" />
+    <Content Include="Views\FamilyGroup\Index.cshtml" />
+    <Content Include="Views\FamilyGroup\FamilyGroupForm.cshtml" />
+    <Content Include="Views\FamilyGroup\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -334,6 +343,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012161957553_AddApplicationUserToLane.resx">
       <DependentUpon>202012161957553_AddApplicationUserToLane.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012171327039_AddFamilyGroup.resx">
+      <DependentUpon>202012171327039_AddFamilyGroup.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
