FamilyGroup Func > Member Class > View - Dropdown and ViewModel Created

--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -227,6 +227,7 @@
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModel\AllMeetEventsViewModel.cs" />
     <Compile Include="ViewModel\LaneFormViewModel.cs" />
+    <Compile Include="ViewModel\MemberFormViewModel.cs" />
     <Compile Include="ViewModel\SwimmingEventFormViewModel.cs" />
     <Compile Include="ViewModel\SwimmingMeetFormViewModel.cs" />
   </ItemGroup>
