Guest Level Auth Func

--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -305,6 +305,8 @@
     <Content Include="Views\FamilyGroup\New.cshtml" />
     <Content Include="Views\Member\AllSwimmers.cshtml" />
     <Content Include="Views\Member\_SwimmerFilterGrid.cshtml" />
+    <Content Include="Views\SwimmingEvent\ReadOnlySwimmingEventForm.cshtml" />
+    <Content Include="Views\Shared\_NavBarGuest.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
