--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -308,6 +308,8 @@
     <Content Include="Views\SwimmingEvent\ReadOnlySwimmingEventForm.cshtml" />
     <Content Include="Views\Shared\_NavBarGuest.cshtml" />
     <Content Include="Views\Shared\_NavBarParent.cshtml" />
+    <Content Include="Views\Shared\_NavBarSwimmer.cshtml" />
+    <Content Include="Views\SwimmingEvent\PersonalIndex.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
