--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -310,6 +310,7 @@
     <Content Include="Views\Shared\_NavBarParent.cshtml" />
     <Content Include="Views\Shared\_NavBarSwimmer.cshtml" />
     <Content Include="Views\SwimmingEvent\PersonalIndex.cshtml" />
+    <Content Include="Views\Member\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
