--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -176,8 +176,10 @@
     <Compile Include="Controllers\SwimmingEventController.cs" />
     <Compile Include="Controllers\SwimmingMeetController.cs" />
     <Compile Include="DAL\IMemberRepository.cs" />
+    <Compile Include="DAL\ISwimmingEventRepository.cs" />
     <Compile Include="DAL\ISwimmingMeetRepository.cs" />
     <Compile Include="DAL\MemberRepository.cs" />
+    <Compile Include="DAL\SwimmingEventRepository.cs" />
     <Compile Include="DAL\SwimmingMeetRepository.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -317,6 +319,7 @@
     <Content Include="Views\Member\Delete.cshtml" />
     <Content Include="Views\SwimmingMeet\Delete.cshtml" />
     <Content Include="Views\SwimmingEvent\Delete.cshtml" />
+    <Content Include="Views\FamilyGroup\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
