Api - Member: Get all and Update

--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -189,6 +189,7 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\Api\LanesController.cs" />
+    <Compile Include="Controllers\Api\MembersController.cs" />
     <Compile Include="Controllers\Api\SwimmingEventsController.cs" />
     <Compile Include="Controllers\Api\SwimmingMeetsController.cs" />
     <Compile Include="Controllers\FamilyGroupController.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="DAL\SwimmingEventRepository.cs" />
     <Compile Include="DAL\SwimmingMeetRepository.cs" />
     <Compile Include="Dtos\LaneDto.cs" />
+    <Compile Include="Dtos\MemberDto.cs" />
     <Compile Include="Dtos\SwimmingEventDto.cs" />
     <Compile Include="Dtos\SwimmingMeetDto.cs" />
     <Compile Include="Global.asax.cs">
