Api - FamilyGroup: Get all

--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -188,6 +188,7 @@
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Api\FamilyGroupsController.cs" />
     <Compile Include="Controllers\Api\LanesController.cs" />
     <Compile Include="Controllers\Api\MembersController.cs" />
     <Compile Include="Controllers\Api\SwimmingEventsController.cs" />
@@ -209,6 +210,7 @@
     <Compile Include="DAL\MemberRepository.cs" />
     <Compile Include="DAL\SwimmingEventRepository.cs" />
     <Compile Include="DAL\SwimmingMeetRepository.cs" />
+    <Compile Include="Dtos\FamilyGroupDto.cs" />
     <Compile Include="Dtos\LaneDto.cs" />
     <Compile Include="Dtos\MemberDto.cs" />
     <Compile Include="Dtos\SwimmingEventDto.cs" />
