--- a/UnitTestCollegeRoadSwimmingClub/packages.config
+++ b/UnitTestCollegeRoadSwimmingClub/packages.config
@@ -1,10 +1,18 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="4.1.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Cors" version="5.0.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.7" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Owin" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
 </packages>
