--- a/UnitTestCollegeRoadSwimmingClub/packages.config
+++ b/UnitTestCollegeRoadSwimmingClub/packages.config
@@ -10,6 +10,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.Owin" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Owin.Cors" version="4.1.1" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.1.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
