--- a/CollegeRoadApplication/CollegeRoadApplication.csproj
+++ b/CollegeRoadApplication/CollegeRoadApplication.csproj
@@ -191,6 +191,7 @@
   <ItemGroup>
     <Compile Include="Controllers\Api\AccountsController.cs" />
     <Compile Include="Controllers\Api\SimpleController.cs" />
+    <Compile Include="Controllers\Api\SwimmersController.cs" />
     <Compile Include="OAuthProvider\ApplicationOAuthProvider.cs" />
     <Compile Include="OAuthProvider\ChallengeResults.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
