--- a/UnitTestCollegeRoadSwimmingClub/UnitTestCollegeRoadSwimmingClub.csproj
+++ b/UnitTestCollegeRoadSwimmingClub/UnitTestCollegeRoadSwimmingClub.csproj
@@ -106,6 +106,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="API\SwimmingMeetsControllerTest.cs" />
+    <Compile Include="API\FamilyGroupsControllerTest.cs" />
     <Compile Include="DAL\SwimmingMeetControllerTest.cs" />
     <Compile Include="DAL\FamilyGroupControllTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -120,6 +122,7 @@
       <Name>CollegeRoadApplication</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
